--- a/style.css
+++ b/style.css
@@ -63,11 +63,36 @@ a {
     
 
 #id { 
+    height: 100vh;
+    width: 15vw;
     text-decoration: none;
     color: white;
     display: flex;
-    justify-content: space-between ;
-    
+    justify-content: space-evenly;
+    align-items: center;
+    /* background-color: blueviolet; */
+   
+}
+#MenuSlide{
+    height: 200vh;
+    width: 30vw;
+   
+    background-color: black;
+    position: absolute;
+    right: -100%;
+    line-height: 30px;
+    color: #fff;
+   
+    display: flex;
+    flex-direction: column;
+    z-index: 1000;
+}
+#id:hover + #MenuSlide{
+    right: 100%;
+}
+#MenuSlide a{
+    text-decoration: none;
+    color: #fff;
 }
 #star{
     margin-right: 100px;
@@ -79,7 +104,7 @@ a {
 #div1{
     margin: 1%;
     height: 25%;
-    width: 80%;
+    width: 100%;
 
     display: flex;
     justify-content: space-evenly;
@@ -87,7 +112,15 @@ a {
     align-items: center;
     text-align: center;
 }
+#nav-btn{
+    height: 100%;
+    width: 75%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
 
+}
 
 #div1 a::after {
     
@@ -108,10 +141,6 @@ a {
 
 }
 
-/* #div1 a:active::after {
-    width: 100%;    
-
-} */
 #id i{
     text-decoration: none;
 }
@@ -134,11 +163,6 @@ a {
 }
 
 
-#div1 h1 {
-    font-size: 40px;
-
-}
-
 #but {
     margin: 0px;
     padding: 15px 25px;
@@ -152,7 +176,6 @@ a {
 #but:hover {
     color: black;
     background-color: white;
-    /* transition: all ease 0.5s; */
 
 }
 
